remove birthday cake

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday & Engagement Anniversary!</title>
+    <title>Happy Birthday & Engagement Day!</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,7 +24,7 @@
                 <h1 class="main-title">
                     <span class="birthday-text">Happy Birthday</span>
                     <span class="and-text">&</span>
-                    <span class="engagement-text">Engagement Anniversary</span>
+                    <span class="engagement-text">Engagement Day</span>
                 </h1>
                 <p class="date-text">September 5th, 2025</p>
                 <div class="heart-icon">
@@ -42,9 +42,9 @@
                 </div>
                 <div class="card-content">
                     <p class="message-text">
-                        Today marks another year of your beautiful existence and the anniversary of the day 
-                        we promised to spend our lives together. You bring joy, love, and light into my world 
-                        every single day. Happy Birthday, my love, and happy engagement anniversary to us!
+                        Today marks another year of your beautiful existence and the day we make our love 
+                        official in front of our families! You bring joy, love, and light into my world 
+                        every single day. Happy Birthday, my love, and congratulations on our engagement day!
                     </p>
                     <div class="love-quote">
                         <i class="fas fa-quote-left"></i>
@@ -73,8 +73,8 @@
                         <i class="fas fa-ring"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>Engagement Day</h3>
-                        <p>September 5th - The day we said "Yes" to forever</p>
+                        <h3>Our Engagement Day</h3>
+                        <p>September 5th - The day we make it official with our families</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -86,23 +86,6 @@
                         <p>Our journey continues with endless love</p>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Interactive Section -->
-        <section class="interactive-section">
-            <div class="birthday-cake">
-                <div class="cake">
-                    <div class="cake-layer layer1"></div>
-                    <div class="cake-layer layer2"></div>
-                    <div class="cake-layer layer3"></div>
-                    <div class="candle">
-                        <div class="flame"></div>
-                    </div>
-                </div>
-                <button class="blow-candle-btn" onclick="blowCandle()">
-                    <i class="fas fa-wind"></i> Make a wish and blow the candle!
-                </button>
             </div>
         </section>
 
