--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <span class="and-text">&</span>
                     <span class="engagement-text">Engagement Day</span>
                 </h1>
+                <h2 class="name-subtitle">Beautiful Siham</h2>
                 <p class="date-text">September 5th, 2025</p>
                 <div class="heart-icon">
                     <i class="fas fa-heart"></i>
@@ -38,13 +39,13 @@
             <div class="message-card">
                 <div class="card-header">
                     <i class="fas fa-ring"></i>
-                    <h2>To My Beautiful Fiancé</h2>
+                    <h2>To My Beautiful Siham</h2>
                 </div>
                 <div class="card-content">
                     <p class="message-text">
-                        Today marks another year of your beautiful existence and the day we make our love 
+                        Today marks another year of Siham's beautiful existence and the day we make our love 
                         official in front of our families! You bring joy, love, and light into my world 
-                        every single day. Happy Birthday, my love, and congratulations on our engagement day!
+                        every single day. Happy Birthday, my darling Siham, and congratulations on our engagement day!
                     </p>
                     <div class="love-quote">
                         <i class="fas fa-quote-left"></i>
@@ -119,7 +120,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-content">
-                <p>With all my love, always and forever ❤️</p>
+                <p>For my beloved Siham, with all my love, always and forever ❤️</p>
                 <div class="footer-hearts">
                     <i class="fas fa-heart"></i>
                     <i class="fas fa-heart"></i>
