use the number 23 and make the design less colorful

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday & Engagement Day!</title>
+    <title>Siham's 23rd Birthday & Engagement Day!</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,16 +18,19 @@
                 <i class="fas fa-heart heart3"></i>
                 <i class="fas fa-heart heart4"></i>
                 <i class="fas fa-heart heart5"></i>
+                <span class="floating-number age-23">23</span>
+                <span class="floating-number age-23-2">23</span>
             </div>
             
             <div class="hero-content">
                 <h1 class="main-title">
-                    <span class="birthday-text">Happy Birthday</span>
+                    <span class="birthday-text">Happy 23rd Birthday</span>
                     <span class="and-text">&</span>
                     <span class="engagement-text">Engagement Day</span>
                 </h1>
                 <h2 class="name-subtitle">Beautiful Siham</h2>
                 <p class="date-text">September 5th, 2025</p>
+                <div class="age-highlight">✨ 23 Years of Amazing ✨</div>
                 <div class="heart-icon">
                     <i class="fas fa-heart"></i>
                 </div>
@@ -43,9 +46,9 @@
                 </div>
                 <div class="card-content">
                     <p class="message-text">
-                        Today marks another year of Siham's beautiful existence and the day we make our love 
-                        official in front of our families! You bring joy, love, and light into my world 
-                        every single day. Happy Birthday, my darling Siham, and congratulations on our engagement day!
+                        Today marks Siham's 23rd year of bringing beauty and joy to this world, and the day we make our love 
+                        official in front of our families! At 23, you shine brighter than ever, and you bring joy, love, and light into my world 
+                        every single day. Happy 23rd Birthday, my darling Siham, and congratulations on our engagement day!
                     </p>
                     <div class="love-quote">
                         <i class="fas fa-quote-left"></i>
@@ -71,6 +74,15 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-icon">
+                        <i class="fas fa-birthday-cake"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Siham Turns 23</h3>
+                        <p>September 5th - Celebrating 23 years of your beautiful soul</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
                         <i class="fas fa-ring"></i>
                     </div>
                     <div class="timeline-content">
@@ -92,7 +104,7 @@
 
         <!-- Wishes Section -->
         <section class="wishes-section">
-            <h2 class="section-title">Birthday Wishes</h2>
+            <h2 class="section-title">23 Beautiful Wishes for Siham</h2>
             <div class="wishes-grid">
                 <div class="wish-card">
                     <i class="fas fa-star"></i>
