--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <div class="message-card">
                 <div class="card-header">
                     <i class="fas fa-ring"></i>
-                    <h2>To My Beautiful Siham</h2>
+                    <h2>To Beautiful Siham</h2>
                 </div>
                 <div class="card-content">
                     <p class="message-text">
-                        Today marks Siham's 23rd year of bringing beauty and joy to this world, and the day we make our love 
+                        Today marks your 23rd year of bringing beauty and joy to this world, and the day we make our love 
                         official in front of our families! At 23, you shine brighter than ever, and you bring joy, love, and light into my world 
-                        every single day. Happy 23rd Birthday, my darling Siham, and congratulations on our engagement day!
+                        every single day. Happy 23rd Birthday, dear Siham, and congratulations on our engagement day!
                     </p>
                     <div class="love-quote">
                         <i class="fas fa-quote-left"></i>
@@ -68,8 +68,26 @@
                         <i class="fas fa-heart"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>First Meeting</h3>
-                        <p>The day our hearts recognized each other</p>
+                        <h3>First Text Message</h3>
+                        <p>July 27th - The day she first reached out and our beautiful story began</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>First Meeting with Family</h3>
+                        <p>August 17th - When we first met in the presence of our families</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-coffee"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Our First Time Alone</h3>
+                        <p>July 18th - When we got to know each other personally</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -104,7 +122,7 @@
 
         <!-- Wishes Section -->
         <section class="wishes-section">
-            <h2 class="section-title">23 Beautiful Wishes for Siham</h2>
+            <h2 class="section-title">Beautiful Wishes for Siham</h2>
             <div class="wishes-grid">
                 <div class="wish-card">
                     <i class="fas fa-star"></i>
@@ -132,7 +150,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-content">
-                <p>For my beloved Siham, with all my love, always and forever ❤️</p>
+                <p>Developed for beloved Siham, with all my love, always and forever </p>
                 <div class="footer-hearts">
                     <i class="fas fa-heart"></i>
                     <i class="fas fa-heart"></i>
