--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>First Text Message</h3>
-                        <p>July 27th - The day she first reached out and our beautiful story began</p>
+                        <p>July 27th - The day she first reached out on WhatsApp and our beautiful story began</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="timeline-content">
                         <h3>Our First Time Alone</h3>
-                        <p>July 18th - When we got to know each other personally</p>
+                        <p>August 18th - When we got to know each other personally</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -122,7 +122,7 @@
 
         <!-- Wishes Section -->
         <section class="wishes-section">
-            <h2 class="section-title">Beautiful Wishes for Siham</h2>
+            <h2 class="section-title">Wishes for Siham</h2>
             <div class="wishes-grid">
                 <div class="wish-card">
                     <i class="fas fa-star"></i>
